# IlolG

./: .gitignore  README.md  bot.py  config.py  pyproject.toml
features/: leaderboard.py
ilolg/: bot.py  config.py  lol_api.py
ilolg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ilolg/data/: players.json
ilolg/features/: leaderboard.py  leaderboard_scheduler.py  player_manager.py
ilolg/features/leaderboard/: discord_leaderboard.py  leaderboard.py  leaderboard_scheduler.py
ilolg/features/live_tracker/: discord_message_model.py  get_player_stat.py  live_tracking.py  live_tracking_scheduler.py  stats_model.py
ilolg/features/manage_player/: player_manager.py  rank_model.py
ilolg/tft/: test.py
ilolg/utils/: scheduler.py
lol/: lol_api.py
lol/features/leaderboard/: discord_leaderboard.py  leaderboard.py  leaderboard_scheduler.py
lol/features/live_tracker/: get_player_stat.py  live_tracking_scheduler.py
tests/: stat_model.py  test_leaderboard.py  test_riot_api.py
tft/: test.py  tft_tracker.py
