[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IlolG"
version = "0.2.0"
description = "Discord Bot for Lol"
authors = [
    { name = "LjeAlexis", email = "alexislajugiepro@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.21.0",
    "requests>=2.28.0",
    "apscheduler>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/LjeAlexis"
Source = "https://github.com/LjeAlexis/IlolG"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
lol-discord-bot = "ilolg.bot:main"